[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "battlesnake-long-prime"
description = ""
version = "0.1.0"
license = "MIT"
authors = ["backwardspy <backwardspy@gmail.com>"]

[tool.poetry.dependencies]
falcon = "^3.0.1"
gunicorn = "^20.1.0"
python = "^3.8"
Werkzeug = "^2.0.1"
pydantic = "^1.8.2"

[tool.poetry.group.dev.dependencies]
black = "^21.9-beta.0"
mypy = "^0.910"
pytest = "^6.2.5"
ptpython = "^3.0.20"
pylint = "^2.11.1"


[tool.poetry.dev-dependencies]
Werkzeug = "^2.0.1"
black = "^21.9b0"
isort = "^5.9.3"
pylint = "^2.11.1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-module-docstring",
    "no-member",
    "too-few-public-methods",
]
