[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "battlesnake-long-prime"
description = ""
version = "0.1.0"
license = "MIT"
authors = ["backwardspy <backwardspy@gmail.com>"]

[tool.poetry.dependencies]
falcon = "^3.1.0"
gunicorn = "^20.1.0"
python = "^3.8"
pydantic = "^1.9.1"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"
Werkzeug = "^2.1.2"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-module-docstring",
    "no-member",
    "too-few-public-methods",
]

[tool.mypy]
ignore_missing_imports = true
